Refatorando crud de prato